--- a/.github/workflows/CI_TEST.yml
+++ b/.github/workflows/CI_TEST.yml
@@ -6,9 +6,13 @@ on:
   workflow_dispatch:
   # develop 브랜치에서 push나 pull request 이벤트 발생 시 해당 workflow가 트리거됨
   push:
-    branches: [ "develop" ]
-  pull_request_target:
-    branches: [ "develop" ]
+    branches:
+      - main
+      - develop
+  # pull_request_target:
+  #   branches:
+  #     - main
+  #     - develop
 
 # 하나 이상의 Job으로 구성 가능
 jobs:
