--- a/.github/workflows/CI_TEST.yml
+++ b/.github/workflows/CI_TEST.yml
@@ -9,10 +9,10 @@ on:
     branches:
       - main
       - develop
-  # pull_request_target:
-  #   branches:
-  #     - main
-  #     - develop
+  pull_request_target:
+    branches:
+      - main
+      - develop
 
 # 하나 이상의 Job으로 구성 가능
 jobs:
