--- a/.github/workflows/CI_TEST.yml
+++ b/.github/workflows/CI_TEST.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
       - develop
-  pull_request_target:
+  pull_request:
     branches:
       - main
       - develop
