--- a/.github/workflows/CI_BUILD.yml
+++ b/.github/workflows/CI_BUILD.yml
@@ -42,6 +42,10 @@ jobs:
       - name: Show current version of Xcode
         run: xcodebuild -version
 
+      # Swift 버전 출력
+      - name: Check Swift version
+        run: xcrun swift --version
+
       # 현재 작업 디렉토리 확인
       - name: Show current working directory
         run: pwd
