chore: 테스트 워크플로우에 SPM 패키지 resolve 추가 (#169)

--- a/.github/workflows/CI_TEST.yml
+++ b/.github/workflows/CI_TEST.yml
@@ -77,6 +77,9 @@ jobs:
           cd Resource
           ls -al
 
+      - name: Resolve Swift Packages
+        run: xcodebuild -resolvePackageDependencies
+
       # 테스트 스크립트 실행
       - name: Run tests
         run: |
